<resources>
    <string name="app_name">REES</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registerLink">Not a user yet? Register </string>
    <string name="hereLink">\ here</string>
    <string name="register">Register</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="contact">Contact</string>
    <string name="type">Type</string>
    <string name="username">Username</string>
    <string name="loginLink">Already a user? Login</string>
    <string name="forgotPasswordLink">Forgot Password?</string>
    <string name="send">Send</string>
    <string name="search">Search</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="logout">Logout</string>
    <string-array name="userType">
        <item>Buyer</item>
        <item>Seller</item>
    </string-array>

    <string-array name="propertyType">
        <item>Flat</item>
        <item>House/Villa</item>
        <item>Plot</item>
        <item>Office Space</item>
        <item>Other Commercial</item>
        <item>Shop/Showroom</item>
        <item>PG</item>
    </string-array>

    <string-array name="bhkChoices">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>>5</item>
    </string-array>

    <string-array name="construction_status_choices">
        <item>Ready To Move</item>
        <item>Under Construction</item>
    </string-array>


    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title">Title</string>
    <string name="locality">Locality</string>
    <string name="property_type">Property Type</string>
    <string name="price">Price</string>
    <string name="bhk">BHK</string>
    <string name="construction_status">Construction Status</string>
    <string name="area">Area (sq. ft.)</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="post">Post</string>
    <string name="get_contact">Get Contact</string>
    <string name="image">Imagr</string>
    <string name="uid">UID</string>
</resources>
