<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:id="@+id/emailField"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:id="@+id/passwordField"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_below="@+id/emailField"
            tools:ignore="Autofill" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_alignStart="@id/passwordField"
            android:id="@+id/forgotPasswordText"
            android:text="@string/forgotPasswordLink"
            android:textColor="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:onClick="goToChangePassword"
            android:layout_below="@+id/passwordField"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_alignStart="@id/passwordField"
            android:id="@+id/registerText1"
            android:text="@string/registerLink"
            android:layout_below="@+id/loginButton"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/registerText1"
            android:text="@string/hereLink"
            android:textColor="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:onClick="goToRegister"
            android:layout_below="@+id/loginButton"
            />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordField"
            android:layout_alignEnd="@+id/passwordField"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="login"
            android:text="@string/login" />

    </RelativeLayout>

</ScrollView>