<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/usernameLayout">

            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/usernameField"
                android:text="@string/username"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:id="@+id/usernameField"
                android:inputType="text"
                tools:ignore="Autofill" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/usernameLayout"
            android:id="@+id/emailLayout">

            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/emailField"
                android:text="@string/email"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:id="@+id/emailField"
                android:inputType="textEmailAddress"
                tools:ignore="Autofill" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/passwordLayout"
            android:layout_below="@+id/emailLayout">

            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/passwordField"
                android:text="@string/password"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:id="@+id/passwordField"
                android:inputType="textPassword"
                tools:ignore="Autofill" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/firstNameLayout"
            android:layout_below="@+id/passwordLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/firstNameField"
                android:text="@string/firstName" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:id="@+id/firstNameField"
                android:inputType="text"
                tools:ignore="Autofill" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/lastNameLayout"
            android:layout_below="@+id/firstNameLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/lastNameField"
                android:text="@string/lastName"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:id="@+id/lastNameField"
                android:inputType="text"
                tools:ignore="Autofill" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/contactLayout"
            android:layout_below="@+id/lastNameLayout">

            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/contactField"
                android:text="@string/contact"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:id="@+id/contactField"
                android:inputType="phone"
                tools:ignore="Autofill" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/userTypeLayout"
            android:layout_below="@+id/contactLayout">

            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:labelFor="@id/userTypeField"
                android:text="@string/type" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:id="@+id/userTypeField"
                android:layout_marginTop="20dp"
                android:entries="@array/userType"
                >
            </Spinner>

        </LinearLayout>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="52dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/register"
            android:layout_below="@+id/userTypeLayout"
            android:onClick="register"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/registerText1"
            android:text="@string/loginLink"
            android:layout_below="@+id/registerButton"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/registerText1"
            android:text="@string/hereLink"
            android:textColor="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:onClick="goToLogin"
            android:layout_below="@+id/registerButton"
            />


    </RelativeLayout>

</ScrollView>