<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/propertyTitleLayout">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/propertyTitleField"
                android:text="@string/title"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:id="@+id/propertyTitleField"
                android:inputType="text"
                tools:ignore="Autofill" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/propertyTitleLayout"
            android:id="@+id/localityLayout">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/localityField"
                android:text="@string/locality"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:id="@+id/localityField"
                android:inputType="text"
                tools:ignore="Autofill" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/propertyTypeLayout"
            android:layout_below="@+id/localityLayout">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:labelFor="@id/propertyTypeField"
                android:text="@string/property_type" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:id="@+id/propertyTypeField"
                android:layout_marginTop="20dp"
                android:entries="@array/propertyType" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/priceLayout"
            android:layout_below="@+id/propertyTypeLayout">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/priceField"
                android:text="@string/price" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:id="@+id/priceField"
                android:inputType="number"
                tools:ignore="Autofill" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/bhkLayout"
            android:layout_below="@+id/priceLayout">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:labelFor="@id/bhkField"
                android:text="@string/bhk"
                />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:id="@+id/bhkField"
                android:entries="@array/bhkChoices"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/construction_statusLayout"
            android:layout_below="@+id/bhkLayout">

            <TextView
                android:layout_width="90dp"
                android:layout_height="45dp"
                android:labelFor="@id/construction_statusField"
                android:text="@string/construction_status" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:id="@+id/construction_statusField"
                android:entries="@array/construction_status_choices"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/areaLayout"
            android:layout_below="@+id/construction_statusLayout">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/areaField"
                android:text="@string/area" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:inputType="number"
                android:id="@+id/areaField"
                tools:ignore="Autofill"
                >
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/addressLayout"
            android:layout_below="@+id/areaLayout">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/addressField"
                android:text="@string/address" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:inputType="textMultiLine"
                android:id="@+id/addressField"
                tools:ignore="Autofill"
                >
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/descriptionLayout"
            android:layout_below="@+id/addressLayout">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/descriptionField"
                android:text="@string/description" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:inputType="textMultiLine"
                android:id="@+id/descriptionField"
                tools:ignore="Autofill"
                >
            </EditText>

        </LinearLayout>


        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="52dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/post"
            android:layout_below="@+id/descriptionLayout"
            android:onClick="post"/>

    </RelativeLayout>

</ScrollView>