<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/image" />

        <LinearLayout
            android:id="@+id/dataContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/image"
            android:layout_marginStart="50dp"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/titleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/titleField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="50dp"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/localityLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:textSize="16sp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/localityField"
                    android:text="@string/locality" />

                <TextView
                    android:id="@+id/localityField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/propertyTypeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:textSize="16sp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/propertyTypeField"
                    android:text="@string/property_type" />

                <TextView
                    android:id="@+id/propertyTypeField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/priceLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:textSize="16sp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/priceField"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/priceField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bhkLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:textSize="16sp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/bhkField"
                    android:text="@string/bhk" />

                <TextView
                    android:id="@+id/bhkField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/construction_statusLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:textSize="16sp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/construction_statusField"
                    android:text="@string/construction_status" />

                <TextView
                    android:id="@+id/construction_statusField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/areaLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:textSize="16sp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/areaField"
                    android:text="@string/area" />

                <TextView
                    android:id="@+id/areaField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:textSize="16sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/addressLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:textSize="16sp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/addressField"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/addressField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:textSize="16sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/descriptionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:textSize="16sp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/descriptionField"
                    android:text="@string/description" />

                <TextView
                    android:id="@+id/descriptionField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dataContainer"
            android:layout_margin="50dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/get_contact"/>

    </RelativeLayout>

</ScrollView>